--- a/app/globals.css
+++ b/app/globals.css
@@ -3,42 +3,48 @@
 @tailwind utilities;
 
 :root {
-  --background: oklch(0.9232 0.0026 48.7171);
-  --foreground: oklch(0.2795 0.0368 260.0310);
-  --card: oklch(0.9699 0.0013 106.4238);
-  --card-foreground: oklch(0.2795 0.0368 260.0310);
-  --popover: oklch(0.9699 0.0013 106.4238);
-  --popover-foreground: oklch(0.2795 0.0368 260.0310);
-  --primary: oklch(0.5854 0.2041 277.1173);
-  --primary-foreground: oklch(1.0000 0 0);
-  --secondary: oklch(0.8687 0.0043 56.3660);
-  --secondary-foreground: oklch(0.4461 0.0263 256.8018);
-  --muted: oklch(0.9232 0.0026 48.7171);
-  --muted-foreground: oklch(0.5510 0.0234 264.3637);
-  --accent: oklch(0.9376 0.0260 321.9388);
-  --accent-foreground: oklch(0.3729 0.0306 259.7328);
-  --destructive: oklch(0.6368 0.2078 25.3313);
-  --destructive-foreground: oklch(1.0000 0 0);
-  --border: oklch(0.8687 0.0043 56.3660);
-  --input: oklch(0.8687 0.0043 56.3660);
-  --ring: oklch(0.5854 0.2041 277.1173);
-  --chart-1: oklch(0.5854 0.2041 277.1173);
-  --chart-2: oklch(0.5106 0.2301 276.9656);
-  --chart-3: oklch(0.4568 0.2146 277.0229);
-  --chart-4: oklch(0.3984 0.1773 277.3662);
-  --chart-5: oklch(0.3588 0.1354 278.6973);
-  --sidebar: oklch(0.8687 0.0043 56.3660);
-  --sidebar-foreground: oklch(0.2795 0.0368 260.0310);
-  --sidebar-primary: oklch(0.5854 0.2041 277.1173);
-  --sidebar-primary-foreground: oklch(1.0000 0 0);
-  --sidebar-accent: oklch(0.9376 0.0260 321.9388);
-  --sidebar-accent-foreground: oklch(0.3729 0.0306 259.7328);
-  --sidebar-border: oklch(0.8687 0.0043 56.3660);
-  --sidebar-ring: oklch(0.5854 0.2041 277.1173);
+  --background: hsl(20 5.8824% 90%);
+  --foreground: hsl(217.2414 32.5843% 17.4510%);
+  --card: hsl(60 4.7619% 95.8824%);
+  --card-foreground: hsl(217.2414 32.5843% 17.4510%);
+  --popover: hsl(60 4.7619% 95.8824%);
+  --popover-foreground: hsl(217.2414 32.5843% 17.4510%);
+  --primary: hsl(238.7324 83.5294% 66.6667%);
+  --primary-foreground: hsl(0 0% 100%);
+  --secondary: hsl(24.0000 5.7471% 82.9412%);
+  --secondary-foreground: hsl(215 13.7931% 34.1176%);
+  --muted: hsl(20 5.8824% 90%);
+  --muted-foreground: hsl(220 8.9362% 46.0784%);
+  --accent: hsl(292.5000 44.4444% 92.9412%);
+  --accent-foreground: hsl(216.9231 19.1176% 26.6667%);
+  --destructive: hsl(0 84.2365% 60.1961%);
+  --destructive-foreground: hsl(0 0% 100%);
+  --border: hsl(24.0000 5.7471% 82.9412%);
+  --input: hsl(24.0000 5.7471% 82.9412%);
+  --ring: hsl(238.7324 83.5294% 66.6667%);
+  --chart-1: hsl(238.7324 83.5294% 66.6667%);
+  --chart-2: hsl(243.3962 75.3555% 58.6275%);
+  --chart-3: hsl(244.5205 57.9365% 50.5882%);
+  --chart-4: hsl(243.6522 54.5024% 41.3725%);
+  --chart-5: hsl(242.1687 47.4286% 34.3137%);
+  --sidebar: hsl(24.0000 5.7471% 82.9412%);
+  --sidebar-foreground: hsl(217.2414 32.5843% 17.4510%);
+  --sidebar-primary: hsl(238.7324 83.5294% 66.6667%);
+  --sidebar-primary-foreground: hsl(0 0% 100%);
+  --sidebar-accent: hsl(292.5000 44.4444% 92.9412%);
+  --sidebar-accent-foreground: hsl(216.9231 19.1176% 26.6667%);
+  --sidebar-border: hsl(24.0000 5.7471% 82.9412%);
+  --sidebar-ring: hsl(238.7324 83.5294% 66.6667%);
   --font-sans: Outfit, sans-serif;
   --font-serif: Inter, sans-serif;
   --font-mono: Roboto Mono, monospace;
   --radius: 1.25rem;
+  --shadow-x: 2px;
+  --shadow-y: 2px;
+  --shadow-blur: 10px;
+  --shadow-spread: 4px;
+  --shadow-opacity: 0.18;
+  --shadow-color: hsl(240 4% 60%);
   --shadow-2xs: 2px 2px 10px 4px hsl(240 4% 60% / 0.09);
   --shadow-xs: 2px 2px 10px 4px hsl(240 4% 60% / 0.09);
   --shadow-sm: 2px 2px 10px 4px hsl(240 4% 60% / 0.18), 2px 1px 2px 3px hsl(240 4% 60% / 0.18);
@@ -52,42 +58,48 @@
 }
 
 .dark {
-  --background: oklch(0.1822 0 0);
-  --foreground: oklch(0.9288 0.0126 255.5078);
-  --card: oklch(0.2381 0.0133 285.3449);
-  --card-foreground: oklch(0.9288 0.0126 255.5078);
-  --popover: oklch(0.2381 0.0133 285.3449);
-  --popover-foreground: oklch(0.9288 0.0126 255.5078);
-  --primary: oklch(0.8497 0.0756 228.3193);
-  --primary-foreground: oklch(0.1776 0 0);
-  --secondary: oklch(0.6098 0.2397 7.4072);
-  --secondary-foreground: oklch(0.9797 0.0091 341.7993);
-  --muted: oklch(0.2532 0.0225 284.6780);
-  --muted-foreground: oklch(0.7137 0.0192 261.3246);
-  --accent: oklch(0.6638 0.2207 303.5046);
-  --accent-foreground: oklch(0.9715 0.0224 321.3480);
-  --destructive: oklch(0.6462 0.1945 24.3804);
-  --destructive-foreground: oklch(0.1960 0.0275 344.6750);
-  --border: oklch(0.3485 0 0);
-  --input: oklch(0.3485 0 0);
-  --ring: oklch(0.8497 0.0756 228.3193);
-  --chart-1: oklch(0.8497 0.0756 228.3193);
-  --chart-2: oklch(0.5854 0.2041 277.1173);
-  --chart-3: oklch(0.6098 0.2397 7.4072);
-  --chart-4: oklch(0.6638 0.2207 303.5046);
-  --chart-5: oklch(0.7044 0.1887 48.8208);
-  --sidebar: oklch(0.2381 0.0133 285.3449);
-  --sidebar-foreground: oklch(0.9288 0.0126 255.5078);
-  --sidebar-primary: oklch(0.8497 0.0756 228.3193);
-  --sidebar-primary-foreground: oklch(0.1730 0 0);
-  --sidebar-accent: oklch(0.6098 0.2397 7.4072);
-  --sidebar-accent-foreground: oklch(0.9797 0.0091 341.7993);
-  --sidebar-border: oklch(0.3485 0 0);
-  --sidebar-ring: oklch(0.8497 0.0756 228.3193);
+  --background: hsl(0 0% 7.0588%);
+  --foreground: hsl(214.2857 31.8182% 91.3725%);
+  --card: hsl(240 10.4478% 13.1373%);
+  --card-foreground: hsl(214.2857 31.8182% 91.3725%);
+  --popover: hsl(240 10.4478% 13.1373%);
+  --popover-foreground: hsl(214.2857 31.8182% 91.3725%);
+  --primary: hsl(198.9130 82.1429% 78.0392%);
+  --primary-foreground: hsl(0 0% 6.6667%);
+  --secondary: hsl(335.6757 88.0952% 49.4118%);
+  --secondary-foreground: hsl(325.7143 63.6364% 97.8431%);
+  --muted: hsl(240 15.3846% 15.2941%);
+  --muted-foreground: hsl(217.8947 10.6145% 64.9020%);
+  --accent: hsl(269.4118 100.0000% 70%);
+  --accent-foreground: hsl(291.4286 100% 97.2549%);
+  --destructive: hsl(0 81.4433% 61.9608%);
+  --destructive-foreground: hsl(325.7143 30.4348% 9.0196%);
+  --border: hsl(0 0% 22.7451%);
+  --input: hsl(0 0% 22.7451%);
+  --ring: hsl(198.9130 82.1429% 78.0392%);
+  --chart-1: hsl(198.9130 82.1429% 78.0392%);
+  --chart-2: hsl(238.7324 83.5294% 66.6667%);
+  --chart-3: hsl(335.6757 88.0952% 49.4118%);
+  --chart-4: hsl(269.4118 100.0000% 70%);
+  --chart-5: hsl(27.3171 97.6190% 49.4118%);
+  --sidebar: hsl(240 10.4478% 13.1373%);
+  --sidebar-foreground: hsl(214.2857 31.8182% 91.3725%);
+  --sidebar-primary: hsl(198.9130 82.1429% 78.0392%);
+  --sidebar-primary-foreground: hsl(0 0% 6.2745%);
+  --sidebar-accent: hsl(335.6757 88.0952% 49.4118%);
+  --sidebar-accent-foreground: hsl(325.7143 63.6364% 97.8431%);
+  --sidebar-border: hsl(0 0% 22.7451%);
+  --sidebar-ring: hsl(198.9130 82.1429% 78.0392%);
   --font-sans: Outfit, sans-serif;
   --font-serif: Inter, sans-serif;
   --font-mono: Roboto Mono, monospace;
   --radius: 1.25rem;
+  --shadow-x: 2px;
+  --shadow-y: 2px;
+  --shadow-blur: 10px;
+  --shadow-spread: 4px;
+  --shadow-opacity: 0.18;
+  --shadow-color: hsl(0 0% 0%);
   --shadow-2xs: 2px 2px 10px 4px hsl(0 0% 0% / 0.09);
   --shadow-xs: 2px 2px 10px 4px hsl(0 0% 0% / 0.09);
   --shadow-sm: 2px 2px 10px 4px hsl(0 0% 0% / 0.18), 2px 1px 2px 3px hsl(0 0% 0% / 0.18);
@@ -153,28 +165,6 @@
 
 
 
-@layer base {
-  :root {
-    --sidebar-background: 0 0% 98%;
-    --sidebar-foreground: 240 5.3% 26.1%;
-    --sidebar-primary: 240 5.9% 10%;
-    --sidebar-primary-foreground: 0 0% 98%;
-    --sidebar-accent: 240 4.8% 95.9%;
-    --sidebar-accent-foreground: 240 5.9% 10%;
-    --sidebar-border: 220 13% 91%;
-    --sidebar-ring: 217.2 91.2% 59.8%;
-  }
-  .dark {
-    --sidebar-background: 240 5.9% 10%;
-    --sidebar-foreground: 240 4.8% 95.9%;
-    --sidebar-primary: 224.3 76.3% 48%;
-    --sidebar-primary-foreground: 0 0% 100%;
-    --sidebar-accent: 240 3.7% 15.9%;
-    --sidebar-accent-foreground: 240 4.8% 95.9%;
-    --sidebar-border: 240 3.7% 15.9%;
-    --sidebar-ring: 217.2 91.2% 59.8%;
-  }
-}
 
 
 
